[gd_scene load_steps=9 format=2]

[ext_resource path="res://codigos/caja_para_prueba_instancias.gd" type="Script" id=1]
[ext_resource path="res://escenas/cubo.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenas_importadas/Material.material" type="Material" id=3]
[ext_resource path="res://typografias/A-Space Black Demo.otf" type="DynamicFontData" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "caja"
surfaces/0 = {
"aabb": AABB( -657.523, -5.56524, -657.523, 1315.05, 11.1225, 1315.05 ),
"array_data": PoolByteArray( 120, 97, 36, 196, 111, 22, 178, 192, 120, 97, 36, 68, 0, 127, 0, 0, 127, 0, 0, 127, 74, 211, 106, 83, 120, 97, 36, 68, 111, 22, 178, 192, 120, 97, 36, 196, 0, 127, 0, 0, 127, 0, 0, 127, 106, 83, 74, 211, 120, 97, 36, 196, 111, 22, 178, 192, 120, 97, 36, 196, 0, 127, 0, 0, 127, 0, 0, 127, 74, 211, 74, 211, 120, 97, 36, 68, 111, 22, 178, 192, 120, 97, 36, 68, 0, 127, 0, 0, 127, 0, 0, 127, 106, 83, 106, 83, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 193, 0, 127, 0, 0, 127, 0, 0, 127, 172, 189, 253, 188, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 193, 0, 127, 0, 0, 127, 0, 0, 127, 124, 65, 227, 189, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 193, 0, 127, 0, 0, 127, 0, 0, 127, 174, 190, 227, 189, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 193, 0, 127, 0, 0, 127, 0, 0, 127, 252, 64, 253, 188, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 65, 0, 0, 127, 0, 129, 0, 0, 127, 184, 195, 229, 64, 178, 139, 103, 193, 173, 212, 177, 192, 111, 251, 78, 65, 0, 0, 127, 0, 129, 0, 0, 127, 255, 55, 203, 189, 178, 139, 103, 65, 173, 212, 177, 192, 111, 251, 78, 65, 0, 0, 127, 0, 129, 0, 0, 127, 184, 195, 203, 189, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 65, 0, 0, 127, 0, 129, 0, 0, 127, 255, 55, 229, 64, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 65, 129, 0, 0, 0, 0, 0, 129, 127, 255, 55, 229, 64, 178, 139, 103, 193, 173, 212, 177, 192, 111, 251, 78, 193, 129, 0, 0, 0, 0, 0, 129, 127, 101, 68, 203, 189, 178, 139, 103, 193, 173, 212, 177, 192, 111, 251, 78, 65, 129, 0, 0, 0, 0, 0, 129, 127, 255, 55, 203, 189, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 193, 129, 0, 0, 0, 0, 0, 129, 127, 101, 68, 229, 64, 178, 139, 103, 65, 173, 212, 177, 192, 111, 251, 78, 65, 0, 129, 0, 0, 127, 0, 0, 127, 0, 57, 0, 0, 178, 139, 103, 193, 173, 212, 177, 192, 111, 251, 78, 193, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 178, 139, 103, 65, 173, 212, 177, 192, 111, 251, 78, 193, 0, 129, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 178, 139, 103, 193, 173, 212, 177, 192, 111, 251, 78, 65, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 0, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 193, 127, 0, 0, 0, 0, 0, 127, 127, 194, 199, 229, 64, 178, 139, 103, 65, 173, 212, 177, 192, 111, 251, 78, 65, 127, 0, 0, 0, 0, 0, 127, 127, 184, 195, 203, 189, 178, 139, 103, 65, 173, 212, 177, 192, 111, 251, 78, 193, 127, 0, 0, 0, 0, 0, 127, 127, 194, 199, 203, 189, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 65, 127, 0, 0, 0, 0, 0, 127, 127, 184, 195, 229, 64, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 193, 0, 0, 129, 0, 127, 0, 0, 127, 101, 68, 229, 64, 178, 139, 103, 65, 173, 212, 177, 192, 111, 251, 78, 193, 0, 0, 129, 0, 127, 0, 0, 127, 97, 72, 203, 189, 178, 139, 103, 193, 173, 212, 177, 192, 111, 251, 78, 193, 0, 0, 129, 0, 127, 0, 0, 127, 101, 68, 203, 189, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 193, 0, 0, 129, 0, 127, 0, 0, 127, 97, 72, 229, 64, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 193, 0, 0, 127, 0, 127, 0, 0, 129, 0, 59, 155, 192, 52, 40, 77, 193, 141, 249, 97, 192, 151, 100, 55, 193, 0, 0, 127, 0, 127, 0, 0, 129, 0, 59, 0, 56, 52, 40, 77, 65, 141, 249, 97, 192, 151, 100, 55, 193, 0, 0, 127, 0, 127, 0, 0, 129, 0, 59, 155, 192, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 193, 0, 0, 127, 0, 127, 0, 0, 129, 0, 59, 0, 56, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 65, 0, 127, 0, 0, 126, 0, 0, 127, 174, 190, 242, 64, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 65, 0, 127, 0, 0, 127, 0, 0, 127, 252, 64, 127, 64, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 65, 0, 127, 0, 0, 127, 0, 0, 127, 172, 189, 127, 64, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 65, 0, 127, 0, 0, 126, 0, 0, 127, 124, 65, 242, 64, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 65, 0, 127, 0, 0, 126, 0, 0, 127, 174, 190, 242, 64, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 193, 0, 127, 0, 0, 127, 0, 0, 127, 172, 189, 253, 188, 178, 139, 103, 193, 175, 212, 177, 64, 111, 251, 78, 193, 0, 127, 0, 0, 127, 0, 0, 127, 174, 190, 227, 189, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 65, 0, 127, 0, 0, 127, 0, 0, 127, 172, 189, 127, 64, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 193, 0, 127, 0, 0, 127, 0, 0, 127, 252, 64, 253, 188, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 65, 0, 127, 0, 0, 126, 0, 0, 127, 124, 65, 242, 64, 178, 139, 103, 65, 175, 212, 177, 64, 111, 251, 78, 193, 0, 127, 0, 0, 127, 0, 0, 127, 124, 65, 227, 189, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 65, 0, 127, 0, 0, 127, 0, 0, 127, 252, 64, 127, 64, 52, 40, 77, 193, 141, 249, 97, 192, 151, 100, 55, 65, 0, 127, 0, 0, 0, 0, 127, 127, 31, 62, 151, 62, 52, 40, 77, 65, 141, 249, 97, 192, 151, 100, 55, 193, 0, 127, 0, 0, 0, 0, 127, 127, 94, 184, 221, 182, 52, 40, 77, 193, 141, 249, 97, 192, 151, 100, 55, 193, 0, 127, 0, 0, 0, 0, 127, 127, 94, 184, 151, 62, 52, 40, 77, 65, 141, 249, 97, 192, 151, 100, 55, 65, 0, 127, 0, 0, 0, 0, 127, 127, 31, 62, 221, 182, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 65, 129, 0, 0, 0, 127, 0, 0, 127, 0, 59, 207, 196, 52, 40, 77, 65, 141, 249, 97, 192, 151, 100, 55, 193, 129, 0, 0, 0, 127, 0, 0, 127, 0, 59, 155, 192, 52, 40, 77, 65, 141, 249, 97, 192, 151, 100, 55, 65, 129, 0, 0, 0, 127, 0, 0, 127, 0, 59, 207, 196, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 193, 129, 0, 0, 0, 127, 0, 0, 127, 0, 59, 155, 192, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 193, 127, 0, 0, 0, 127, 0, 0, 127, 0, 59, 0, 56, 52, 40, 77, 193, 141, 249, 97, 192, 151, 100, 55, 65, 127, 0, 0, 0, 127, 0, 0, 127, 0, 59, 3, 66, 52, 40, 77, 193, 141, 249, 97, 192, 151, 100, 55, 193, 127, 0, 0, 0, 127, 0, 0, 127, 0, 59, 0, 56, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 65, 127, 0, 0, 0, 127, 0, 0, 127, 0, 59, 3, 66, 52, 40, 77, 193, 175, 212, 177, 64, 151, 100, 55, 65, 0, 0, 129, 0, 127, 0, 0, 127, 0, 59, 3, 66, 52, 40, 77, 65, 141, 249, 97, 192, 151, 100, 55, 65, 0, 0, 129, 0, 127, 0, 0, 127, 0, 59, 207, 69, 52, 40, 77, 193, 141, 249, 97, 192, 151, 100, 55, 65, 0, 0, 129, 0, 127, 0, 0, 127, 0, 59, 3, 66, 52, 40, 77, 65, 175, 212, 177, 64, 151, 100, 55, 65, 0, 0, 129, 0, 127, 0, 0, 127, 0, 59, 207, 69 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 4, 0, 6, 0, 5, 0, 4, 0, 5, 0, 7, 0, 8, 0, 10, 0, 9, 0, 8, 0, 9, 0, 11, 0, 12, 0, 14, 0, 13, 0, 12, 0, 13, 0, 15, 0, 16, 0, 18, 0, 17, 0, 16, 0, 17, 0, 19, 0, 20, 0, 22, 0, 21, 0, 20, 0, 21, 0, 23, 0, 24, 0, 26, 0, 25, 0, 24, 0, 25, 0, 27, 0, 28, 0, 30, 0, 29, 0, 28, 0, 29, 0, 31, 0, 32, 0, 34, 0, 33, 0, 32, 0, 33, 0, 35, 0, 36, 0, 38, 0, 37, 0, 36, 0, 37, 0, 39, 0, 40, 0, 42, 0, 41, 0, 43, 0, 40, 0, 41, 0, 44, 0, 46, 0, 45, 0, 44, 0, 45, 0, 47, 0, 48, 0, 50, 0, 49, 0, 48, 0, 49, 0, 51, 0, 52, 0, 54, 0, 53, 0, 52, 0, 53, 0, 55, 0, 56, 0, 58, 0, 57, 0, 56, 0, 57, 0, 59, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 90,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 60
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -657.523, -5.5652, 657.523, -657.523, -5.5652, -657.523, 657.523, -5.5652, -657.523, -657.523, -5.5652, 657.523, 657.523, -5.5652, -657.523, 657.523, -5.5652, 657.523, -12.8223, 5.5572, -11.4621, -14.4716, 5.5572, -12.9364, 14.4716, 5.5572, -12.9364, -12.8223, 5.5572, -11.4621, 14.4716, 5.5572, -12.9364, 12.8223, 5.5572, -11.4621, 14.4716, 5.5572, 12.9364, 14.4716, -5.5572, 12.9364, -14.4716, -5.5572, 12.9364, 14.4716, 5.5572, 12.9364, -14.4716, -5.5572, 12.9364, -14.4716, 5.5572, 12.9364, -14.4716, 5.5572, 12.9364, -14.4716, -5.5572, 12.9364, -14.4716, -5.5572, -12.9364, -14.4716, 5.5572, 12.9364, -14.4716, -5.5572, -12.9364, -14.4716, 5.5572, -12.9364, 14.4716, -5.5572, 12.9364, 14.4716, -5.5572, -12.9364, -14.4716, -5.5572, -12.9364, 14.4716, -5.5572, 12.9364, -14.4716, -5.5572, -12.9364, -14.4716, -5.5572, 12.9364, 14.4716, 5.5572, -12.9364, 14.4716, -5.5572, -12.9364, 14.4716, -5.5572, 12.9364, 14.4716, 5.5572, -12.9364, 14.4716, -5.5572, 12.9364, 14.4716, 5.5572, 12.9364, -14.4716, 5.5572, -12.9364, -14.4716, -5.5572, -12.9364, 14.4716, -5.5572, -12.9364, -14.4716, 5.5572, -12.9364, 14.4716, -5.5572, -12.9364, 14.4716, 5.5572, -12.9364, 12.8223, 5.5572, -11.4621, 12.8223, -3.5309, -11.4621, -12.8223, -3.5309, -11.4621, 12.8223, 5.5572, -11.4621, -12.8223, -3.5309, -11.4621, -12.8223, 5.5572, -11.4621, -14.4716, 5.5572, 12.9364, -12.8223, 5.5572, 11.4621, 12.8223, 5.5572, 11.4621, -14.4716, 5.5572, 12.9364, 12.8223, 5.5572, 11.4621, 14.4716, 5.5572, 12.9364, -14.4716, 5.5572, 12.9364, -14.4716, 5.5572, -12.9364, -12.8223, 5.5572, -11.4621, -14.4716, 5.5572, 12.9364, -12.8223, 5.5572, -11.4621, -12.8223, 5.5572, 11.4621, 12.8223, 5.5572, -11.4621, 14.4716, 5.5572, -12.9364, 14.4716, 5.5572, 12.9364, 12.8223, 5.5572, 11.4621, 12.8223, 5.5572, -11.4621, 14.4716, 5.5572, 12.9364, -12.8223, -3.5309, 11.4621, -12.8223, -3.5309, -11.4621, 12.8223, -3.5309, -11.4621, -12.8223, -3.5309, 11.4621, 12.8223, -3.5309, -11.4621, 12.8223, -3.5309, 11.4621, 12.8223, 5.5572, 11.4621, 12.8223, -3.5309, 11.4621, 12.8223, -3.5309, -11.4621, 12.8223, 5.5572, 11.4621, 12.8223, -3.5309, -11.4621, 12.8223, 5.5572, -11.4621, -12.8223, 5.5572, -11.4621, -12.8223, -3.5309, -11.4621, -12.8223, -3.5309, 11.4621, -12.8223, 5.5572, -11.4621, -12.8223, -3.5309, 11.4621, -12.8223, 5.5572, 11.4621, -12.8223, 5.5572, 11.4621, -12.8223, -3.5309, 11.4621, 12.8223, -3.5309, 11.4621, -12.8223, 5.5572, 11.4621, 12.8223, -3.5309, 11.4621, 12.8223, 5.5572, 11.4621 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 4 )

[node name="caja_para_prueba_instancias" type="Spatial"]
pause_mode = 1
script = ExtResource( 1 )
cubo = ExtResource( 2 )

[node name="Camera" type="Spatial" parent="."]
transform = Transform( 0.699115, 0.577555, 0.421508, 5.51343e-06, 0.589509, -0.807762, -0.715009, 0.56472, 0.412132, 49.5239, 54.3762, 50.268 )

[node name="Camera_Orientation" type="Camera" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )
fov = 42.2
near = 0.1
far = 1000.0

[node name="cubo" parent="." instance=ExtResource( 2 )]
input_ray_pickable = false

[node name="Solo_suelo" type="Spatial" parent="."]

[node name="caja" type="MeshInstance" parent="Solo_suelo"]
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Solo_suelo/caja"]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Solo_suelo/caja/StaticBody"]
shape = SubResource( 2 )

[node name="posicion_instancia_cubos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 47.6175, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="cantidad_de_cubos" type="RichTextLabel" parent="."]
margin_left = 170.0
margin_top = 530.0
margin_right = 900.0
margin_bottom = 690.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Cantidad de cubos = 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FPS"

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.845854, 0.12921, -0.517528, 0.279462, 0.71906, 0.636282, 0.454347, -0.682831, 0.57211, 0, 31.1453, 0 )
light_energy = 0.8
light_specular = 0.0
light_bake_mode = 2
shadow_enabled = true
directional_shadow_normal_bias = 0.5
directional_shadow_bias_split_scale = 0.5
directional_shadow_depth_range = 1
directional_shadow_max_distance = 130.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
